--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-linear-gradient": "^2.6.2",
     "react-native-reanimated": "^3.0.1",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.20.0"
+    "react-native-screens": "^3.20.0",
+    "react-native-svg": "^13.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
