--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-reanimated": "^3.0.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
-    "react-native-svg": "^13.8.0"
+    "react-native-svg": "^13.8.0",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
