--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-iphone-x-helper": "^1.3.1",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-reanimated": "^3.0.1",
     "react-native-safe-area-context": "^4.5.0",
